<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"

     tools:context=".LoginScreen">


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
android:text="@string/login"
    android:textSize="40sp"
    android:textColor="?attr/but_logout"
    android:layout_gravity="start"
    android:paddingStart="30sp"
   android:layout_marginBottom="20sp"
    tools:ignore="HardcodedText" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:boxStrokeColor="?attr/but_logout"
        android:textColorHint="?attr/but_logout"
        app:hintTextColor="?attr/but_logout"
        android:hint="@string/UserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            app:errorEnabled="true"


            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="?attr/but_logout"
        android:textColorHint="?attr/but_logout"
        app:hintTextColor="?attr/but_logout"
         android:hint="@string/password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            app:errorEnabled="true"


            />

    </com.google.android.material.textfield.TextInputLayout>



    <CheckBox
        android:id="@+id/checkBoxid"
        android:layout_width="146dp"
        android:layout_height="52dp"

        android:layout_marginBottom="25dp"
        android:layout_gravity="start"
        android:layout_marginStart="25dp"
        android:text="@string/remember_me"
            android:buttonTint="?attr/but_logout"
        app:layout_constraintVertical_bias="0.024" />
    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="50dp"
         android:textColor="@color/white"
        android:backgroundTint="?attr/but_logout"

        android:text="@string/login"

        app:layout_constraintHorizontal_bias="0.498"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:textColor="?attr/account"
        android:paddingTop="10dp"/>




</androidx.appcompat.widget.LinearLayoutCompat>